# Dependabot

./: pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
my_project/: main.py
tests/: test_main.py
