[tool.poetry]
name = "dependabot-demo"
version = "0.1.0"
description = "A sample project to demonstrate Dependabot with Poetry and GitHub Actions"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"